# rbsherpa_hl_common

rbsherpa_hl_control/config/: pantilt_controllers.yaml  rbsherpa_hl_control.yaml  rbsherpa_hl_control_ackermann.yaml  rbsherpa_hl_control_ackermann_sim.yaml  rbsherpa_hl_control_omni.yaml  rbsherpa_hl_control_omni_sim.yaml  torso_controllers.yaml
rbsherpa_hl_control/config/gazebo/: gazebo_controller_ackermann.yaml  gazebo_controller_omni.yaml
rbsherpa_hl_control/launch/: rbsherpa_hl_control.launch  rbsherpa_hl_control_ackermann_sim.launch  rbsherpa_hl_control_omni_sim.launch  rbsherpa_hl_control_pantilt.launch
rbsherpa_hl_description/: CMakeLists.txt  package.xml
rbsherpa_hl_description/launch/: rbsherpa_hl_rviz.launch  rbsherpa_hl_state.launch
rbsherpa_hl_description/meshes/bases/: rbsherpa_hl_base.dae  rbsherpa_hl_base_tank.stl  rbsherpa_hl_base_v2.stl
rbsherpa_hl_description/meshes/others/: rbsherpa_hl_column.dae  rbsherpa_hl_tt_giro.stl
rbsherpa_hl_description/meshes/pantilt/: pan_dynamixel.dae  pan_dynamixel.stl  sprayer.dae  sprayer.stl  tilt_dynamixel.dae  tilt_dynamixel.stl
rbsherpa_hl_description/meshes/structure/: rbsherpa_hl_column.dae  rbsherpa_hl_column.stl  rbsherpa_hl_elevator.dae  rbsherpa_hl_elevator.stl  rbsherpa_hl_structure.dae  rbsherpa_hl_structure.stl  rbsherpa_hl_tt_giro.dae
rbsherpa_hl_description/meshes/wheels/: rbsherpa_hl_motorwheel.stl  rbsherpa_hl_wheel.stl
rbsherpa_hl_description/robots/: rbsherpa_hl_ackermann_std.urdf.xacro  rbsherpa_hl_omni_std.urdf.xacro  rbsherpa_hl_std.urdf.xacro  rbsherpa_hl_tank_std.urdf.xacro
rbsherpa_hl_description/urdf/: common.gazebo.xacro
rbsherpa_hl_description/urdf/bases/: rbsherpa_hl_base.gazebo.xacro  rbsherpa_hl_base.urdf.xacro  rbsherpa_hl_base_tank.urdf.xacro
rbsherpa_hl_description/urdf/pantilt/: pan_tilt.urdf.xacro
rbsherpa_hl_description/urdf/structures/: elevator_structure.urdf.xacro  gimbal.urdf.xacro  structure.urdf.xacro
rbsherpa_hl_description/urdf/wheels/: motor_rubber_wheel.gazebo.xacro  motor_rubber_wheel.transmission.xacro  motor_rubber_wheel.urdf.xacro  motor_wheel.transmission.xacro  motor_wheel.urdf.xacro  rubber_wheel.gazebo.xacro  rubber_wheel.transmission.xacro  rubber_wheel.urdf.xacro  steer_wheel.transmission.xacro  steer_wheel.urdf.xacro  traction_wheel.transmission.xacro  traction_wheel.urdf.xacro  wheel_steer.transmission.xacro  wheel_steer.urdf.xacro  wheel_traction.transmission.xacro  wheel_traction.urdf.xacro
rbsherpa_hl_localization/: CMakeLists.txt  package.xml
rbsherpa_hl_localization/launch/: amcl.launch
rbsherpa_hl_navigation/: CMakeLists.txt  package.xml
rbsherpa_hl_navigation/config/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
rbsherpa_hl_navigation/launch/: move_base_amcl.launch
rbsherpa_hl_pad/: CMakeLists.txt  package.xml
rbsherpa_hl_pad/config/: base_ps4.yaml  base_ps4_ackermann.yaml  base_ps4_omni.yaml
rbsherpa_hl_pad/launch/: rbsherpa_hl_pad.launch
rbsherpa_hl_pad/src/: rbsherpa_hl_pad.cpp
rbsherpa_xl_common/: CMakeLists.txt  package.xml
rbsherpa_xl_control/: CMakeLists.txt  package.xml
rbsherpa_xl_description/: CMakeLists.txt  package.xml
rbsherpa_xl_description/launch/: rbsherpa_xl_rviz.launch
rbsherpa_xl_description/meshes/bases/: rbsherpa_xl_base.stl
rbsherpa_xl_description/meshes/others/: rbsherpa_xl_tt_giro.dae
rbsherpa_xl_description/meshes/wheels/: rbsherpa_xl_wheel.dae
rbsherpa_xl_description/robots/: rbsherpa_xl_std.urdf.xacro
rbsherpa_xl_description/urdf/bases/: rbsherpa_xl_base.urdf.xacro
rbsherpa_xl_description/urdf/wheels/: rubber_wheel.urdf.xacro
rbsherpa_xl_localization/: CMakeLists.txt  package.xml
rbsherpa_xl_navigation/: CMakeLists.txt  package.xml
rbsherpa_xl_pad/: CMakeLists.txt  package.xml
