<?xml version="1.0"?>
<package>
  <name>rbsherpa_hl_navigation</name>
  <version>0.0.0</version>
  <description>The rbsherpa_hl_navigation package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>
  <maintainer email="asoriano@robotnik.es">alvaro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>navigation</run_depend>
  <run_depend>gmapping</run_depend>

</package>
