<?xml version="1.0"?>
<package>
  <name>rbsherpa_xl_control</name>
  <version>0.0.0</version>
  <description>The rbsherpa_xl_control package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rbsherpa_xl_pad</run_depend>

</package>
