<?xml version="1.0"?>
<package>
  <name>rbsherpa_xl_description</name>
  <version>0.0.0</version>
  <description>The rbsherpa_xl_description package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robotnik_sensors</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
