<?xml version="1.0"?>
<package>
  <name>rbsherpa_xl_navigation</name>
  <version>0.0.0</version>
  <description>The rbsherpa_xl_navigation package</description>

  <maintainer email="alvaro@todo.todo">alvaro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>navigation</run_depend>
  <run_depend>gmapping</run_depend>

</package>
